--- a/app/src/main/res/layout/item_prediction_history.xml
+++ b/app/src/main/res/layout/item_prediction_history.xml
@@ -4,74 +4,107 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardCornerRadius="12dp"
+    app:cardCornerRadius="4dp"
+    app:cardBackgroundColor="@color/white_100"
     android:layout_marginBottom="16dp"
+    app:cardElevation="2dp"
     app:strokeWidth="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="?attr/colorPrimary"
-            app:layout_constraintTop_toTopOf="parent"
-            android:alpha="0.8"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="124dp"
-            android:scaleType="centerCrop"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:alpha="0.7"
-            tools:src="@tools:sample/avatars"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="3:3"
+            app:layout_constraintEnd_toStartOf="@id/guideline4"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            tools:src="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/tv_date"
+            android:id="@+id/tv_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textAlignment="textEnd"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_margin="16dp"
-            tools:text="4 Sep 2024 09:11"
+            android:layout_marginTop="8dp"
             android:fontFamily="@font/yd_yoonche_b"
-            android:textColor="@color/purple_80"
-            android:textSize="18sp"/>
+            android:textAlignment="textStart"
+            android:textColor="?attr/colorPrimary"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toStartOf="@id/guideline6"
+            app:layout_constraintStart_toStartOf="@id/tv_session_name"
+            app:layout_constraintTop_toBottomOf="@id/tv_session_name"
+            tools:text="Non Cancer" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="@id/tv_session_name"
-            android:layout_marginTop="-10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:background="?attr/colorPrimary"/>
+        <TextView
+            android:id="@+id/tv_confidence"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/yd_yoonche_b"
+            android:textAlignment="textStart"
+            android:textColor="@color/grey_200"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toStartOf="@id/guideline6"
+            app:layout_constraintStart_toStartOf="@id/tv_session_name"
+            app:layout_constraintTop_toBottomOf="@id/tv_label"
+            tools:text="75%" />
+
+        <TextView
+            android:id="@+id/tv_session_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/yd_yoonche_b"
+            android:textAlignment="textEnd"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="14sp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="@id/imageView"
+            app:layout_constraintEnd_toEndOf="@id/tv_session_name"
+            app:layout_constraintStart_toEndOf="@id/guideline6"
+            tools:text="4 Sep 2024 09:11" />
 
         <TextView
             android:id="@+id/tv_session_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="10dp"
+            android:layout_marginHorizontal="16dp"
             android:ellipsize="end"
-            tools:text="Hasil Diagnosis Punya Pak Bambang"
-            android:maxLines="2"
-            app:layout_constraintTop_toBottomOf="@id/tv_date"
-            app:layout_constraintVertical_bias="1"
             android:fontFamily="@font/yd_yoonche_b"
-            android:textColor="@color/white_100"
-            android:textSize="18sp"/>
+            android:maxLines="2"
+            android:textColor="@color/black_50"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imageView"
+            app:layout_constraintTop_toBottomOf="@id/guideline5"
+            app:layout_constraintVertical_bias="1"
+            tools:text="Hasil Diagnosis Punya Pak Bambang" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.25" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.175" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.65"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
