--- a/app/src/main/res/layout/fragment_prediction_history.xml
+++ b/app/src/main/res/layout/fragment_prediction_history.xml
@@ -70,4 +70,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bg_searchBar" />
 
+    <TextView
+        android:id="@+id/tv_empty"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/searchBar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="16dp"
+        android:visibility="gone"
+        android:text="@string/no_analysis_history_yet"
+        android:textAlignment="center"
+        android:fontFamily="@font/yd_yoonche_m"
+        android:textColor="@color/black_50"
+        android:letterSpacing="0.01"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
