--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -3,9 +3,9 @@
 
     <string-array name="analyze_descriptions">
         <item>Press the button on the</item>
-        <item>Top Left</item>
+        <item>Middle Left</item>
         <item> to select a photo from the gallery, and the one on the </item>
-        <item>Top Right</item>
+        <item>Middle Right</item>
         <item>to take a photo with the camera. Once done, press the </item>
         <item>Analyze</item>
         <item>Button below to start the analysis process.</item>
