--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,136 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:fitsSystemWindows="true"
     tools:context=".presentation.view.ResultActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:fitsSystemWindows="true"
+        android:layout_height="240dp"
+        android:theme="@style/AppBarOverlay">
 
-        <ImageView
-            android:id="@+id/result_image"
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_place_holder" />
+            app:contentScrim="?attr/colorPrimary"
+            android:fitsSystemWindows="true"
+            app:expandedTitleTextAppearance="@style/ExpandedTitleTextStyle"
+            app:collapsedTitleTextAppearance="@style/CollapsedTitleTextStyle"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:toolbarId="@+id/toolbar">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@drawable/purple_bg"
-            app:layout_constraintBottom_toTopOf="@id/guideline"
-            android:elevation="10dp"
-            app:layout_constraintTop_toTopOf="@id/result_image"/>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/result_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                tools:src="@tools:sample/avatars"
+                app:layout_collapseMode="parallax"/>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@drawable/purple_bg"
-            app:layout_constraintTop_toBottomOf="@id/guideline2"
-            app:layout_constraintBottom_toBottomOf="@id/result_image"
-            android:rotationX="180"/>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/PopupOverlay"/>
 
-        <TextView
-            android:id="@+id/tv_session_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:fontFamily="@font/yd_yoonche_m"
-            android:textColor="@color/grey_200"
-            android:textSize="32sp"
-            android:visibility="gone"
-            android:maxLines="2"
-            android:maxLength="25"
-            android:ellipsize="end"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/result_text"
-            app:layout_constraintVertical_bias="0.9"
-            tools:text="Sesi 1" />
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-        <TextView
-            android:id="@+id/result_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:fontFamily="@font/yd_yoonche_b"
-            android:textColor="?attr/colorPrimary"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/result_image"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/result_image"
-            app:layout_constraintVertical_bias="0.9"
-            tools:text="CANCER 76%" />
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/fab_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_save"
-            android:text="@string/save"
-            android:visibility="gone"
-            android:textSize="16sp"
-            app:icon="@android:drawable/ic_menu_save"
-            android:layout_marginBottom="42dp"
-            app:iconPadding="0dp"
-            app:layout_constraintBottom_toTopOf="@id/result_text"
-            app:layout_constraintEnd_toEndOf="@id/result_text" />
+    <include
+        android:id="@+id/content"
+        layout="@layout/content_result"/>
 
-        <ImageButton
-            android:id="@+id/ib_back"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_margin="16dp"
-            android:background="@drawable/circle_pink_bg"
-            app:tint="@color/black_50"
-            android:elevation="10dp"
-            android:src="@drawable/ic_arrow_back"/>
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/fab_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/save"
+        android:visibility="gone"
+        android:textSize="16sp"
+        app:layout_anchor="@id/app_bar"
+        app:layout_anchorGravity="bottom|end"
+        app:icon="@android:drawable/ic_menu_save"
+        android:layout_marginBottom="42dp"
+        app:iconPadding="0dp"/>
 
-        <TextView
-            android:id="@+id/tv_session_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:fontFamily="@font/yd_yoonche_m"
-            android:textColor="@color/white_100"
-            android:visibility="gone"
-            android:textSize="21sp"
-            android:maxLines="2"
-            android:elevation="10dp"
-            android:maxLength="25"
-            android:textAlignment="textEnd"
-            android:ellipsize="end"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@id/result_image"
-            app:layout_constraintTop_toTopOf="@id/result_image"
-            app:layout_constraintStart_toStartOf="@id/ib_back"
-            tools:text="44 Sep 2022 08:22" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.3"/>
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.7"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
