--- a/app/src/main/res/layout/content_result.xml
+++ b/app/src/main/res/layout/content_result.xml
@@ -16,7 +16,7 @@
             android:id="@+id/tv_info_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Date"
+            android:text="@string/date"
             android:fontFamily="@font/yd_yoonche_b"
             android:textColor="@color/grey_200"
             app:layout_constraintTop_toTopOf="parent"
@@ -36,7 +36,7 @@
             android:id="@+id/tv_info_result"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Result"
+            android:text="@string/result"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/yd_yoonche_b"
             android:textColor="@color/grey_200"
@@ -88,7 +88,7 @@
             android:id="@+id/tv_info_note"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Note"
+            android:text="@string/note"
             android:fontFamily="@font/yd_yoonche_b"
             android:textColor="@color/grey_200"
             android:layout_marginTop="16dp"
