--- a/app/src/main/res/layout/item_prediction_history.xml
+++ b/app/src/main/res/layout/item_prediction_history.xml
@@ -19,6 +19,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:alpha="0.7"
+            android:contentDescription="@string/history_image"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="3:3"
@@ -59,7 +60,7 @@
             android:id="@+id/tv_session_date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/yd_yoonche_m"
+            android:fontFamily="@font/yd_yoonche_l"
             android:textAlignment="textEnd"
             android:textColor="@android:color/darker_gray"
             android:textSize="12sp"
