--- a/app/src/main/res/drawable/rounded_purple80_bg.xml
+++ b/app/src/main/res/drawable/rounded_purple80_bg.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/purple_80"/>
     <corners android:radius="8dp"/>
+    <stroke android:color="@color/black_50" android:width="1dp"/>
 </shape>
