--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,6 +12,7 @@
         android:id="@+id/iv_logo"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:contentDescription="@string/logo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
