--- a/app/src/main/res/layout/dialog_fragment_session.xml
+++ b/app/src/main/res/layout/dialog_fragment_session.xml
@@ -3,9 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="16dp"
-    app:cardBackgroundColor="@color/pink_50"
+    app:cardBackgroundColor="@color/white_100"
     app:strokeWidth="0dp"
     app:contentPaddingTop="22dp"
     app:contentPaddingBottom="22dp"
