--- a/app/src/main/res/layout/fragment_prediction.xml
+++ b/app/src/main/res/layout/fragment_prediction.xml
@@ -47,6 +47,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_purple_bg"
+                android:contentDescription="@string/gallery"
                 android:padding="19dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_gallery"
@@ -65,6 +66,7 @@
                 android:id="@+id/cameraButton"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:contentDescription="@string/camera"
                 android:background="@drawable/circle_purple_bg"
                 android:padding="18dp"
                 android:scaleType="fitCenter"
