--- a/app/src/main/res/layout/item_cancer_news.xml
+++ b/app/src/main/res/layout/item_cancer_news.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <com.google.android.material.card.MaterialCardView xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -7,6 +6,7 @@
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     app:strokeWidth="0dp"
+    android:contentDescription="@string/news_item"
     app:cardCornerRadius="0dp"
     app:cardBackgroundColor="@android:color/transparent"
     android:layout_width="match_parent"
@@ -24,6 +24,7 @@
             android:layout_height="0dp"
             android:scaleType="centerCrop"
             android:alpha="0.7"
+            android:contentDescription="@string/news_item_image"
             app:layout_constraintDimensionRatio="4:2"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/avatars"/>
