--- a/app/src/main/res/layout/activity_cancer_news_web.xml
+++ b/app/src/main/res/layout/activity_cancer_news_web.xml
@@ -12,10 +12,10 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="0dp"
         android:layout_height="3dp"
-        app:layout_constraintStart_toStartOf="@id/bg_tv"
         android:background="@color/pink_50"
         app:layout_constraintEnd_toEndOf="@id/bg_tv"
-        app:layout_constraintTop_toBottomOf="@id/bg_tv"/>
+        app:layout_constraintStart_toStartOf="@id/bg_tv"
+        app:layout_constraintTop_toBottomOf="@id/bg_tv" />
 
     <View
         android:id="@+id/bg_tv"
@@ -23,55 +23,51 @@
         android:layout_height="0dp"
         android:layout_marginTop="-10dp"
         android:layout_marginBottom="-10dp"
-        app:layout_constraintTop_toTopOf="@id/ib_close"
-        app:layout_constraintStart_toStartOf="parent"
         android:background="?attr/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="@id/ib_close"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/ib_close"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/ib_close" />
 
     <ImageButton
         android:id="@+id/ib_close"
         android:layout_width="32dp"
         android:layout_height="32dp"
+        android:layout_marginStart="8dp"
+        android:background="@null"
         android:contentDescription="@string/close"
         android:src="@android:drawable/ic_menu_close_clear_cancel"
-        android:background="@null"
-        app:tint="@color/white"
-        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/tv_web_url"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_web_url"
-        app:layout_constraintBottom_toBottomOf="@id/tv_web_url"/>
-
+        app:tint="@color/white" />
 
 
     <TextView
         android:id="@+id/tv_web_url"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/ib_close"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="16sp"
-        android:maxLines="1"
-        android:ellipsize="end"
-        tools:text="https://CancerNews.com"
         android:layout_marginVertical="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
+        android:ellipsize="end"
         android:fontFamily="@font/yd_yoonche_m"
-        android:textColor="@color/white_100"/>
+        android:maxLines="1"
+        android:textColor="@color/white_100"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/ib_close"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="https://CancerNews.com" />
 
     <WebView
         android:id="@+id/webView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/progressBar"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/progressBar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
