--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
         android:background="?attr/colorPrimary"
-        app:tabIndicatorColor="@color/white_100"
+        app:layout_constraintTop_toTopOf="parent"
         app:tabIndicatorAnimationMode="elastic"
+        app:tabIndicatorColor="@color/white_100"
         app:tabIndicatorFullWidth="true"
-        app:tabTextAppearance="@style/TabTextStyle"
-        app:tabIndicatorHeight="4dp"
         app:tabIndicatorGravity="top"
+        app:tabIndicatorHeight="4dp"
         app:tabSelectedTextColor="@color/white_100"
-        app:tabTextColor="@android:color/darker_gray"/>
+        app:tabTextAppearance="@style/TabTextStyle"
+        app:tabTextColor="@android:color/darker_gray" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tabs"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tabs" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
