--- a/app/src/main/res/layout/dialog_fragment_session.xml
+++ b/app/src/main/res/layout/dialog_fragment_session.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="16dp"
     app:cardBackgroundColor="@color/white_100"
-    app:strokeWidth="0dp"
-    app:contentPaddingTop="22dp"
+    app:cardCornerRadius="16dp"
     app:contentPaddingBottom="22dp"
     app:contentPaddingLeft="38dp"
-    app:contentPaddingRight="38dp">
+    app:contentPaddingRight="38dp"
+    app:contentPaddingTop="22dp"
+    app:strokeWidth="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -34,61 +34,61 @@
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/et_session"
             android:layout_width="0dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/outlined_rounded_purple80_bg"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/outlined_rounded_purple80_bg"
             android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM 1234567890"
             android:gravity="center"
             android:hint="@string/session_name"
-            app:layout_constraintTop_toBottomOf="@id/tv_info"
             android:inputType="text"
-            android:paddingVertical="4dp"
             android:maxLength="25"
-            android:layout_marginTop="16dp"
             android:maxLines="1"
-            android:textColorHint="@android:color/darker_gray"
+            android:paddingVertical="4dp"
             android:textColor="@color/black_50"
-            android:textSize="12sp"/>
+            android:textColorHint="@android:color/darker_gray"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_info" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
             android:layout_height="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/rounded_purple80_bg"
             android:maxHeight="64dp"
             android:minHeight="32dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/rounded_purple80_bg"
             android:text="@string/cancel"
             android:textAllCaps="false"
             android:textColor="@color/black_50"
-            app:layout_constraintTop_toBottomOf="@id/et_session"
+            app:layout_constraintEnd_toEndOf="@id/guideline3"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="@id/guideline3"/>
+            app:layout_constraintTop_toBottomOf="@id/et_session" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_done"
             android:layout_width="wrap_content"
             android:layout_height="32dp"
-            android:maxHeight="64dp"
-            android:minHeight="32dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/rounded_purple_bg"
+            android:maxHeight="64dp"
+            android:minHeight="32dp"
             android:text="@string/done"
             android:textAllCaps="false"
             android:textColor="@color/white_100"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toBottomOf="@id/et_session"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/guideline3"/>
+            app:layout_constraintStart_toEndOf="@id/guideline3"
+            app:layout_constraintTop_toBottomOf="@id/et_session" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5"/>
+            app:layout_constraintGuide_percent="0.5" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
