--- a/app/src/main/res/layout/fragment_prediction_history.xml
+++ b/app/src/main/res/layout/fragment_prediction_history.xml
@@ -74,14 +74,14 @@
         android:id="@+id/tv_empty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/searchBar"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="16dp"
-        android:visibility="gone"
+        android:fontFamily="@font/yd_yoonche_m"
+        android:letterSpacing="0.01"
         android:text="@string/no_analysis_history_yet"
         android:textAlignment="center"
-        android:fontFamily="@font/yd_yoonche_m"
         android:textColor="@color/black_50"
-        android:letterSpacing="0.01"/>
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/searchBar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
