--- a/app/src/main/res/layout/header_cancer_news.xml
+++ b/app/src/main/res/layout/header_cancer_news.xml
@@ -1,31 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <View
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="4dp"
         android:background="?attr/colorPrimary"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/some_interesting_information_about_cancer_that_you_might_want_to_know"
-        app:layout_constraintTop_toBottomOf="@id/line"
-        app:layout_constraintStart_toStartOf="@id/line"
         android:layout_marginTop="2dp"
-        android:letterSpacing="-0.04"
-        android:textSize="18sp"
-        android:textColor="?attr/colorPrimary"
         android:fontFamily="@font/yd_yoonche_b"
-        app:layout_constraintEnd_toEndOf="@id/line"
+        android:letterSpacing="-0.04"
         android:paddingBottom="24dp"
-        />
+        android:text="@string/some_interesting_information_about_cancer_that_you_might_want_to_know"
+        android:textColor="?attr/colorPrimary"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@id/line"
+        app:layout_constraintStart_toStartOf="@id/line"
+        app:layout_constraintTop_toBottomOf="@id/line" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
