--- a/app/src/main/res/layout/item_cancer_news.xml
+++ b/app/src/main/res/layout/item_cancer_news.xml
@@ -1,90 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:tools="http://schemas.android.com/tools"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_marginBottom="24dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginStart="8dp"
-    app:strokeWidth="0dp"
-    android:contentDescription="@string/news_item"
-    app:cardCornerRadius="0dp"
-    app:cardBackgroundColor="@android:color/transparent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginBottom="24dp"
+    android:contentDescription="@string/news_item"
+    app:cardBackgroundColor="@android:color/transparent"
+    app:cardCornerRadius="0dp"
+    app:strokeWidth="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        tools:background="@color/purple_80"
+        android:layout_height="wrap_content"
 
-        android:layout_height="wrap_content">
+        tools:background="@color/purple_80">
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:scaleType="centerCrop"
             android:alpha="0.7"
             android:contentDescription="@string/news_item_image"
+            android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio="4:2"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars"/>
+            tools:src="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            tools:text="Title"
-            android:textColor="@color/black_50"
             android:layout_marginHorizontal="4dp"
             android:layout_marginTop="8dp"
-            android:maxLines="3"
             android:ellipsize="end"
             android:fontFamily="@font/yd_yoonche_b"
-            app:layout_constraintTop_toBottomOf="@id/imageView"/>
+            android:maxLines="3"
+            android:textColor="@color/black_50"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@id/imageView"
+            tools:text="Title" />
 
         <TextView
             android:id="@+id/tv_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            tools:text="Description"
-            android:textColor="@color/black_50"
             android:layout_marginHorizontal="4dp"
             android:layout_marginTop="16dp"
-            android:maxLines="5"
             android:ellipsize="end"
             android:fontFamily="@font/yd_yoonche_m"
-            app:layout_constraintTop_toBottomOf="@id/tv_title"/>
+            android:maxLines="5"
+            android:textColor="@color/black_50"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@id/tv_title"
+            tools:text="Description" />
 
         <TextView
             android:id="@+id/tv_author_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:text="@string/author"
-            android:textColor="?attr/colorPrimary"
             android:layout_marginHorizontal="4dp"
             android:layout_marginTop="16dp"
             android:ellipsize="end"
             android:fontFamily="@font/yd_yoonche_b"
-            app:layout_constraintTop_toBottomOf="@id/tv_description"/>
+            android:text="@string/author"
+            android:textColor="?attr/colorPrimary"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@id/tv_description" />
 
         <TextView
             android:id="@+id/tv_author"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            tools:text="Fajar Alif R"
-            android:textColor="@color/black_50"
             android:layout_marginHorizontal="4dp"
             android:layout_marginTop="8dp"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:textStyle="bold"
-            android:fontFamily="@font/yd_yoonche_m"
             android:layout_marginBottom="16dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_author_info" />
+            android:ellipsize="end"
+            android:fontFamily="@font/yd_yoonche_m"
+            android:maxLines="2"
+            android:textColor="@color/black_50"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/tv_author_info"
+            tools:text="Fajar Alif R" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
