making image uri persis on config changes

--- a/app/src/main/res/layout/fragment_prediction.xml
+++ b/app/src/main/res/layout/fragment_prediction.xml
@@ -110,8 +110,8 @@
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/analyzeButton"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/fab_margin"
                 android:text="@string/analyze"
                 android:textColor="@color/black_50"
@@ -119,11 +119,9 @@
                 app:iconPadding="0dp"
                 app:iconTint="@color/black_50"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="3:1.15"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.9"
-                app:layout_constraintWidth_percent="0.35" />
+                app:layout_constraintVertical_bias="0.9"/>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline10"
